重构部分component剩余